kibana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    "ingress.kubernetes.io/rewrite-target": "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
  name: zeebe-kibana-ingress 
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: kibana 
            servicePort: 5601 
          path: /logs
